--- a/conf/config.ini
+++ b/conf/config.ini
@@ -18,5 +18,5 @@ crashReportUrl=https://www.tibiaproject.com/
 fpsHistoryRecipient=https://www.tibiaproject.com/
 tutorialProgressWebService=https://www.tibiaproject.com/
 tournamentDetailsUrl=https://www.tibiaproject.com/          
-loginWebService=http://143.0.20.85:3001                                 
-clientWebService=http://143.0.20.85:3001     
+loginWebService=http://tibiaproject.online/login-service
+clientWebService=http://tibiaproject.online/login-service
